--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,21 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiomysql>=0.2.0",
+    "aiosqlite>=0.21.0",
     "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
+    "python-dotenv>=1.0.0",
     "redis[hiredis]>=6.2.0",
     "sqlalchemy>=2.0.41",
+    "uvicorn>=0.32.0",
 ]
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.0",
     "ruff>=0.11.13",
 ]
 
