--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
+    "greenlet>=3.2.3",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.0.0",
@@ -42,6 +43,8 @@ exclude = [
     ".env",
 ]
 line-length = 120
+
+[tool.ruff.lint]
 ignore = [
     "B017",
     "B019",
