--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,12 @@ dependencies = [
     "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
     "greenlet>=3.2.3",
+    "jinja2>=3.1.6",
+    "logfire[fastapi]>=3.18.0",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.0.0",
+    "python-multipart>=0.0.20",
     "redis[hiredis]>=6.2.0",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.32.0",
