--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "greenlet>=3.2.3",
     "jinja2>=3.1.6",
     "logfire[fastapi]>=3.18.0",
+    "openai>=1.85.0",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
     "python-dotenv>=1.0.0",
